# baxter_seminar

./: .travis.yml  README.md  baxter_seminar.rosinstall  baxter_seminar_helper.rosinstall  seminar.sh
baxter_seminar/: CHANGELOG.rst  CMakeLists.txt  package.xml
baxter_seminar/launch/: imarker_non-moveit.rviz  moveit_demo.launch  seminar.rviz
baxter_seminar/scripts/: ar_demo.py  moveit_demo.py
baxter_seminar_helper/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  seminar.sh
baxter_seminar_helper/launch/: camera_info_fixer.launch  demo.launch  kinect_checkerboard.launch  moveit_demo.launch
baxter_seminar_helper/scripts/: joint_trajectory_controller
