<?xml version="1.0"?>
<package>
  <name>baxter_seminar</name>
  <version>0.1.2</version>
  <description>The baxter_seminar package</description>

  <author email="kei.okada@gmail.com">Kei Okada</author>
  <maintainer email="kei.okada@gmail.com">Kei Okada</maintainer>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>baxter_seminar_helper</run_depend>
  <run_depend>ipython</run_depend>
  <run_depend version_gte="1.0.67">jsk_tools</run_depend>

  <export>
  </export>

</package>
