<?xml version="1.0"?>
<package>
  <name>baxter_seminar_helper</name>
  <version>0.0.2</version>
  <description>The baxter_seminar_helper package</description>

  <author email="kei.okada@gmail.com">Kei Okada</author>
  <maintainer email="kei.okada@gmail.com">Kei Okada</maintainer>
  <maintainer email="iiysaito@opensource-robotics.tokyo.jp">Isaac IY Saito</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ar_track_alvar</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>checkerboard_detector</run_depend>
  <run_depend>dynamic_tf_publisher</run_depend>

  <run_depend>baxter_interface</run_depend>
  <run_depend>baxter_moveit_config</run_depend>
  <run_depend>baxter_sdk</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_plugins</run_depend>
  <run_depend>moveit_ros</run_depend>

  <export>
  </export>

</package>
